Fix dark mode stripe above page titles

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+html,
 body {
   background-color: var(--bs-body-bg);
   color: var(--bs-body-color);
